--- a/ObjectDetection.ipynb
+++ b/ObjectDetection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOs0FvyWXvGy8jHYwnXmJhZ",
+      "authorship_tag": "ABX9TyNIrPeRgOshDDo7+oLlkAru",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,62 +104,6 @@
             "Successfully built panopticapi\n",
             "Installing collected packages: panopticapi\n",
             "Successfully installed panopticapi-0.1\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install git+https://JoseArmandoChavezQuijahuaman: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@github.com/JoseArmandoChavezQuijahuaman/Utils-detection.git#egg=utils_detection"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lcMFAYN5F9yr",
-        "outputId": "dcd813ec-78c5-4133-a68a-cdddafe3193e"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting utils_detection\n",
-            "  Cloning https://JoseArmandoChavezQuijahuaman:****@github.com/JoseArmandoChavezQuijahuaman/Utils-detection.git to /tmp/pip-install-xkpzlmc2/utils-detection_7f9c2d05bd9d489ea225e9a818b1fa38\n",
-            "  Running command git clone --filter=blob:none --quiet 'https://JoseArmandoChavezQuijahuaman:****@github.com/JoseArmandoChavezQuijahuaman/Utils-detection.git' /tmp/pip-install-xkpzlmc2/utils-detection_7f9c2d05bd9d489ea225e9a818b1fa38\n",
-            "  Resolved https://JoseArmandoChavezQuijahuaman:****@github.com/JoseArmandoChavezQuijahuaman/Utils-detection.git to commit 0b620d52e6491ac0fa4550961f9fa3abbd22ad67\n",
-            "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
-            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
-            "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "Requirement already satisfied: torch in /usr/local/lib/python3.10/dist-packages (from utils_detection) (2.0.1+cu118)\n",
-            "Requirement already satisfied: torchvision in /usr/local/lib/python3.10/dist-packages (from utils_detection) (0.15.2+cu118)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from torch->utils_detection) (3.12.0)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from torch->utils_detection) (4.5.0)\n",
-            "Requirement already satisfied: sympy in /usr/local/lib/python3.10/dist-packages (from torch->utils_detection) (1.11.1)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.10/dist-packages (from torch->utils_detection) (3.1)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.10/dist-packages (from torch->utils_detection) (3.1.2)\n",
-            "Requirement already satisfied: triton==2.0.0 in /usr/local/lib/python3.10/dist-packages (from torch->utils_detection) (2.0.0)\n",
-            "Requirement already satisfied: cmake in /usr/local/lib/python3.10/dist-packages (from triton==2.0.0->torch->utils_detection) (3.25.2)\n",
-            "Requirement already satisfied: lit in /usr/local/lib/python3.10/dist-packages (from triton==2.0.0->torch->utils_detection) (16.0.5)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from torchvision->utils_detection) (1.22.4)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from torchvision->utils_detection) (2.27.1)\n",
-            "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /usr/local/lib/python3.10/dist-packages (from torchvision->utils_detection) (8.4.0)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch->utils_detection) (2.1.2)\n",
-            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->torchvision->utils_detection) (1.26.15)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->torchvision->utils_detection) (2022.12.7)\n",
-            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests->torchvision->utils_detection) (2.0.12)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->torchvision->utils_detection) (3.4)\n",
-            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy->torch->utils_detection) (1.3.0)\n",
-            "Building wheels for collected packages: utils_detection\n",
-            "  Building wheel for utils_detection (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for utils_detection: filename=utils_detection-0.0.1-py3-none-any.whl size=10555 sha256=95d4cf22d8c2616ec25e19e4875789aab19cbdb2053b246e95c57bc51c2d0643\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-c9jmllmz/wheels/a0/71/98/58dd1e8c8315b086907d2fa2bf18889b738096d6c6f85e5eb1\n",
-            "Successfully built utils_detection\n",
-            "Installing collected packages: utils_detection\n",
-            "Successfully installed utils_detection-0.0.1\n"
           ]
         }
       ]
@@ -271,6 +215,66 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a function to train the DETRdemo model\n",
+        "def train(model: nn.Module, dataset: CocoDetection, num_epochs: int):\n",
+        "    # Set device\n",
+        "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "\n",
+        "    # Define the transforms for the dataset\n",
+        "    transform = T.Compose([\n",
+        "        T.ToTensor(),\n",
+        "        T.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
+        "    ])\n",
+        "\n",
+        "    # Create DataLoader for the dataset\n",
+        "    dataloader = DataLoader(dataset, batch_size=1, shuffle=True, num_workers=2)\n",
+        "\n",
+        "    # Move the model to the device\n",
+        "    model = model.to(device)\n",
+        "\n",
+        "    # Define the optimizer and scheduler\n",
+        "    optimizer = Adam(model.parameters(), lr=1e-4)\n",
+        "    scheduler = LambdaLR(optimizer, lambda epoch: 0.95 ** epoch)\n",
+        "\n",
+        "    # Define the loss function\n",
+        "    criterion = nn.BCEWithLogitsLoss()\n",
+        "\n",
+        "    # Training loop\n",
+        "    for epoch in range(num_epochs):\n",
+        "        total_loss = 0.0\n",
+        "        model.train()\n",
+        "\n",
+        "        for images, targets in dataloader:\n",
+        "            images = images.to(device)\n",
+        "            targets = [{k: v.to(device) for k, v in t.items()} for t in targets]\n",
+        "\n",
+        "            optimizer.zero_grad()\n",
+        "\n",
+        "            # Forward pass\n",
+        "            outputs = model(images)\n",
+        "            loss = criterion(outputs['pred_logits'], targets['labels'])\n",
+        "            loss += criterion(outputs['pred_boxes'], targets['boxes'])\n",
+        "\n",
+        "            # Backward pass and optimization\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "\n",
+        "            total_loss += loss.item()\n",
+        "\n",
+        "        # Print epoch statistics\n",
+        "        print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {total_loss/len(dataloader)}\")\n",
+        "        scheduler.step()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Rdql75bqS1Lp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
